[package]
name = "request-rate-limiter"
version = "0.2.2"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["ShaJaPas"]
description = """
Request rate limiting with adaptive algorithms for controlling request throughput
"""
documentation = "https://docs.rs/request-rate-limiter"
homepage = "https://github.com/shajapas/request-rate-limiter"
repository = "https://github.com/shajapas/request-rate-limiter"
readme = "README.md"
keywords = ["rate-limiting", "requests", "throttling", "limiter", "backpressure"]
categories = ["web-programming", "algorithms"]

[dependencies]
tokio = { version = "1.48.0", features = ["sync", "time"] }
async-trait = "0.1.89"
conv = "0.3.3"
dashmap = { version = "6.1", optional = true }

[dev-dependencies]
doc-comment = "0.3.3"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }

[features]
default = ["key"]
key = ["dashmap"]
